using width, height, margin, padding, border

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>intro tailwind css framework</title>
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
 </head>
 <body>
     <header>
@@ -15,6 +17,22 @@
             <h3>its very easy for all of us. help for all design and responsive </h3>
             <p>than all developer used its and enjoy the feature. </p>
         </section>
+                <section>
+            <h2 class="font-bold text-2xl">i started a simple tailwind css</h2>
+            <h3 class="text-5xl ">its very easy for all of us. help for all design and responsive </h3>
+            <p>than all developer used its and enjoy the feature. </p>
+            <h2 class="text-right">right text</h2>
+            <h4 class="text-justify bg-red-200">justify text</h4>
+            <p class="text-center ">So I started to walk into the water...</p>
+            <p class="text-blue-600/100 dark:text-sky-400/100 line-through">The quick brown fox... line- through</p>
+            <h3 class="overline decoration-wavy">overline</h3>
+            <div class="h-14 bg-linear-to-r from-red-500 to-purple-300"></div>
+        </section>
+          <section class="border w-3/4 h-64 overflow-scroll border-orange-400 border-10 m-10 p-8">
+            <h1>about us</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt earum nesciunt cupiditate blanditiis magnam facere fugiat error temporibus fugit vel.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur unde ipsam natus voluptas illum non reprehenderit nihil, odio repudiandae assumenda. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur unde ipsam natus voluptas illum non reprehenderit nihil, odio repudiandae assumenda.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur unde ipsam natus voluptas illum non reprehenderit nihil, odio repudiandae assumenda.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur unde ipsam natus voluptas illum non reprehenderit nihil, odio repudiandae assumenda</p>
+          </section>
     </main>
 </body>
 </html>
