--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>intro tailwind css framework</title>
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
 </head>
+
 <body>
     <header>
 
@@ -17,7 +19,7 @@
             <h3>its very easy for all of us. help for all design and responsive </h3>
             <p>than all developer used its and enjoy the feature. </p>
         </section>
-                <section>
+        <section>
             <h2 class="font-bold text-2xl">i started a simple tailwind css</h2>
             <h3 class="text-5xl ">its very easy for all of us. help for all design and responsive </h3>
             <p>than all developer used its and enjoy the feature. </p>
@@ -28,11 +30,42 @@
             <h3 class="overline decoration-wavy">overline</h3>
             <div class="h-14 bg-linear-to-r from-red-500 to-purple-300"></div>
         </section>
-          <section class="border w-3/4 h-64 overflow-scroll border-orange-400 border-10 m-10 p-8">
+        <section class="border w-3/4 h-64 overflow-scroll border-orange-400 border-10 m-10 p-8">
             <h1>about us</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt earum nesciunt cupiditate blanditiis magnam facere fugiat error temporibus fugit vel.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur unde ipsam natus voluptas illum non reprehenderit nihil, odio repudiandae assumenda. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur unde ipsam natus voluptas illum non reprehenderit nihil, odio repudiandae assumenda.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur unde ipsam natus voluptas illum non reprehenderit nihil, odio repudiandae assumenda.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur unde ipsam natus voluptas illum non reprehenderit nihil, odio repudiandae assumenda</p>
-          </section>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt earum nesciunt cupiditate blanditiis
+                magnam facere fugiat error temporibus fugit vel.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur unde ipsam natus voluptas illum non
+                reprehenderit nihil, odio repudiandae assumenda. Lorem ipsum dolor sit, amet consectetur adipisicing
+                elit. Consectetur unde ipsam natus voluptas illum non reprehenderit nihil, odio repudiandae
+                assumenda.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur unde ipsam natus
+                voluptas illum non reprehenderit nihil, odio repudiandae assumenda.Lorem ipsum dolor sit, amet
+                consectetur adipisicing elit. Consectetur unde ipsam natus voluptas illum non reprehenderit nihil, odio
+                repudiandae assumenda</p>
+        </section>
+        <hr>
+        <section>
+            <h1>responsive ness</h1>
+            <p class="bg-red-300 md:bg-orange-400 lg:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">Lorem
+                ipsum dolor sit amet consectetur adipisicing elit. Voluptates perferendis soluta nihil excepturi.
+                Adipisci, ab illum vero nostrum ad voluptatibus. Fuga dolorem rem odit mollitia aperiam harum maiores
+                distinctio quaerat.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates perferendis
+                soluta nihil excepturi. Adipisci, ab illum vero nostrum ad voluptatibus. Fuga dolorem rem odit mollitia
+                aperiam harum maiores distinctio quaerat.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates perferendis soluta nihil excepturi. Adipisci, ab illum vero nostrum ad voluptatibus. Fuga
+                dolorem rem odit mollitia aperiam harum maiores distinctio quaerat.</p>
+        </section>
+        <hr>
+        <section>
+            <h1>flexsivle flex </h1>
+            <div class="h-80 border-4 border-orange-400 flex flex-wrap m-20 space-between md:flex md:justify-between">
+                <div class="font-bold text-3xl uppercase border border-4 border-purple-400 w-40 h-40">item- 1</div>
+                <div class="font-bold text-3xl uppercase border border-4 border-purple-400 w-40 h-40">item- 2</div>
+                <div class="font-bold text-3xl uppercase border border-4 border-purple-400 w-40 h-40">item- 3</div>
+                <div class="font-bold text-3xl uppercase border border-4 border-purple-400 w-40 h-40">item- 4</div>
+            </div>
+
+        </section>
     </main>
 </body>
+
 </html>
