--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
         <hr>
         <section>
-            <h1>responsive ness</h1>
+            <h1 class="text-3xl capitalize font-bold">responsive ness</h1>
             <p class="bg-red-300 md:bg-orange-400 lg:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">Lorem
                 ipsum dolor sit amet consectetur adipisicing elit. Voluptates perferendis soluta nihil excepturi.
                 Adipisci, ab illum vero nostrum ad voluptatibus. Fuga dolorem rem odit mollitia aperiam harum maiores
@@ -56,14 +56,45 @@
         </section>
         <hr>
         <section>
-            <h1>flexsivle flex </h1>
-            <div class="h-80 border-4 border-orange-400 flex flex-wrap m-20 space-between md:flex md:justify-between">
+            <h1 class="text-3xl capitalize font-bold">flexsivle flex </h1>
+            <div class="h-80 border-4 border-orange-400 overflow-scroll m-20 space-between md:flex md:justify-between">
                 <div class="font-bold text-3xl uppercase border border-4 border-purple-400 w-40 h-40">item- 1</div>
                 <div class="font-bold text-3xl uppercase border border-4 border-purple-400 w-40 h-40">item- 2</div>
                 <div class="font-bold text-3xl uppercase border border-4 border-purple-400 w-40 h-40">item- 3</div>
                 <div class="font-bold text-3xl uppercase border border-4 border-purple-400 w-40 h-40">item- 4</div>
             </div>
 
+        </section>
+        <hr>
+        <section>
+            <h1 class="text-3xl capitalize font-bold">grid gird gird</h1>
+            <div class="grid gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 1</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 2</div>
+                <div class="bg-pink-400  border border-white border-4 rounded-md">box- 3</div>
+                <div class="bg-pink-400  border border-white border-4 rounded-md">box- 4</div>
+                <div class=" md:col-span-4 bg-pink-400 border border-white border-4 rounded-md">box- 5</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 6</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 7</div>
+                <div class="bg-pink-400 lg:col-span-2 lg:row-span-3 border border-white border-4 rounded-md">bos- 8
+                </div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 9</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 10</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 11</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 12</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 13</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 14</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 15</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 16</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 17</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 18</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 19</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 20</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 21</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 22</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 23</div>
+                <div class="bg-pink-400 border border-white border-4 rounded-md">box- 24</div>
+            </div>
         </section>
     </main>
 </body>
